# pulsectl-rs

./: .gitignore  Cargo.toml  README.md  crates.js  search-index.js  settings.html  source-files.js
.github/workflows/: ci.yml  codespell.yml  docs.yml
examples/: change_device_vol.rs  server_info.rs
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
implementors/core/convert/: trait.From.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
implementors/core/ops/drop/: trait.Drop.js
implementors/pulsectl/controllers/: trait.DeviceControl.js
implementors/std/error/: trait.Error.js
implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
pulsectl/: all.html  enum.ControllerError.html  enum.Error.html  index.html  sidebar-items.js  struct.Handler.html
pulsectl/controllers/: index.html  sidebar-items.js  struct.SinkController.html  struct.SourceController.html  trait.AppControl.html  trait.DeviceControl.html
pulsectl/controllers/error/: enum.ControllerError.html
pulsectl/controllers/types/: enum.DevState.html  enum.Flags.html  index.html  sidebar-items.js  struct.ApplicationInfo.html  struct.DeviceInfo.html  struct.DevicePortInfo.html  struct.ServerInfo.html
pulsectl/error/: enum.Error.html
src/: error.rs  errors.rs  lib.rs
src/controllers/: error.rs  mod.rs  types.rs
src/pulsectl/: error.rs.html  errors.rs.html  lib.rs.html
src/pulsectl/controllers/: error.rs.html  errors.rs.html  mod.rs.html  types.rs.html
