[package]
name = "pulsectl-rs"
version = "0.2.13"
authors = ["Kristopher Ruzic <krruzic@gmail.com>"]
edition = "2018"
license = "GPL-3.0+"
description = "A higher level API for libpulse_binding"
readme = "README.md"
keywords = ["pulse", "pulseaudio", "binding", "audio", "api"]
categories = ["api-bindings", "multimedia::audio"]
homepage = "https://github.com/SeaDve/pulsectl"
repository = "https://github.com/SeaDve/pulsectl"

[lib]
name = "pulsectl"
path = "src/lib.rs"

[dependencies]
libpulse-binding = "2.22.0"
