[package]
name = "pulsectl-rs"
version = "0.3.1"
authors = ["Kristopher Ruzic <krruzic@gmail.com>"]
edition = "2018"
license = "GPL-3.0-or-later"
description = "A higher level API for libpulse-binding"
readme = "README.md"
keywords = ["pulse", "pulseaudio", "binding", "audio", "api"]
categories = ["api-bindings", "multimedia::audio"]
homepage = "https://github.com/SeaDve/pulsectl-rs"
repository = "https://github.com/SeaDve/pulsectl-rs"

[lib]
name = "pulsectl"
path = "src/lib.rs"

[dependencies]
pulse = { version = "2.24.0", package = "libpulse-binding" }
