[package]
name = "pulsectl-rs"
version = "0.3.2"
authors = ["Kristopher Ruzic <krruzic@gmail.com>"]
description = "A higher level API for libpulse-binding"
homepage = "https://github.com/SeaDve/pulsectl-rs"
documentation = "https://docs.rs/pulsectl-rs"
repository = "https://github.com/SeaDve/pulsectl-rs"
keywords = ["pulse", "pulseaudio", "binding", "audio", "api"]
categories = ["api-bindings", "multimedia::audio"]
readme = "README.md"
license = "GPL-3.0-or-later"
exclude = ["/.github/*"]
edition = "2018"

[lib]
name = "pulsectl"

[dependencies.pulse]
package = "libpulse-binding"
version = "2.24.0"
